# -PyQt5-MySQL-CRUD-LogIn

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: code-quality.yml
Controllers/: CreateProductController.py  LoginController.py  PrincipalController.py
Database/: Connection.py
Models/: Product.py  User.py
Views/: createProduct.py  createProduct.ui  login.py  login.ui  principal.py  principal.ui
src/pyqt_crud/: __main__.py
src/pyqt_crud/adapters/: user.py
src/pyqt_crud/controllers/: user.py
src/pyqt_crud/models/: product.py  user.py
src/pyqt_crud/services/: database.py
src/pyqt_crud/services/database/: user.py
tests/pyqt_crud/: register_user_test.py
tests/pyqt_crud/models/: user_test.py
views/: login.qml
